--- a/static/index.html
+++ b/static/index.html
@@ -101,7 +101,9 @@
                 </button>
             </div>
             <div class="modal-body bg-info text-light">
-                <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ index.message | translate }}
+                <div ng-repeat="message in index.messages">
+                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message }}
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-sm btn-outline-info" data-dismiss="modal">{{ 'Close' | translate }}</button>
