리펙토링 - 클라이언트 다국어 테그 처리

--- a/static/index.html
+++ b/static/index.html
@@ -102,7 +102,7 @@
             </div>
             <div class="modal-body bg-info text-light">
                 <div ng-repeat="message in index.messages">
-                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message }}
+                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message | translate}}
                 </div>
             </div>
             <div class="modal-footer">
